# asynclear

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  justfile  kernel-qemu  makefile  rust-toolchain.toml  rustfmt.toml  taplo.toml  typos.toml
.cargo/: config.toml
.claude/: settings.json
.zed/: settings.json
cargo-submit/: config.toml
crates/arch/riscv_guard/: Cargo.toml
crates/arch/riscv_time/: Cargo.toml
crates/arch/riscv_time/src/: lib.rs
crates/arch/sbi_console/: Cargo.toml
crates/arch/sbi_console/src/: lib.rs
crates/arch/user_check/: Cargo.toml
crates/arch/user_check/src/: lib.rs
crates/drivers/: Cargo.toml
crates/drivers/drivers/: Cargo.toml
crates/drivers/drivers/src/: lib.rs
crates/drivers/drivers_hal/: Cargo.toml
crates/drivers/hal/: Cargo.toml
crates/drivers/qemu_block/: Cargo.toml
crates/drivers/qemu_plic/: Cargo.toml
crates/drivers/qemu_uart/: Cargo.toml
crates/drivers/qemu_uart/src/: lib.rs  tty.rs
crates/drivers/src/: lib.rs
crates/drivers/virtio_glue/: Cargo.toml
crates/drivers/virtio_glue/src/: disk_driver.rs  hal_impl.rs  lib.rs
crates/executor/: Cargo.toml
crates/executor/src/: lib.rs  yield_now.rs
crates/filesystem/: Cargo.toml
crates/filesystem/src/: lib.rs
crates/fs/devfs/: Cargo.toml
crates/fs/devfs/src/: lib.rs  rtc.rs  tty.rs
crates/fs/fat32/: Cargo.toml
crates/fs/fat32/src/: bpb.rs  dir_entry.rs  fat.rs  lib.rs
crates/fs/fat32/tests/: regression.rs
crates/fs/fat32_vfs/: Cargo.toml
crates/fs/fat32_vfs/src/: dir.rs  file.rs  lib.rs
crates/fs/procfs/: Cargo.toml
crates/fs/procfs/src/: lib.rs  meminfo.rs  mounts.rs
crates/fs/tmpfs/: Cargo.toml
crates/fs/tmpfs/src/: lib.rs
crates/kernel/: Cargo.toml  build.rs
crates/kernel/src/: drivers.rs  entry.S  extern_symbols.rs  glue.rs  integration.rs  lang_items.rs  linker.ld  log_impl.rs  main.rs  uart_console.rs
crates/kernel/src/drivers/: mod.rs  qemu_plic.rs
crates/kernel/src/drivers/qemu_block/: disk_driver.rs  mod.rs  virtio.rs
crates/kernel/src/drivers/qemu_uart/: mod.rs
crates/kernel/src/executor/: mod.rs
crates/kernel/src/fs/: dentry.rs  file.rs  inode.rs  mod.rs  page_cache.rs  pipe.rs  stdio.rs
crates/kernel/src/fs/devfs/: mod.rs  rtc.rs  tty.rs
crates/kernel/src/fs/fat32/: bpb.rs  dir.rs  dir_entry.rs  fat.rs  fat_dir.rs  fat_file.rs  file.rs  mod.rs
crates/kernel/src/fs/procfs/: meminfo.rs  mod.rs  mounts.rs
crates/kernel/src/fs/tmpfs/: mod.rs
crates/kernel/src/hart/: mod.rs
crates/kernel/src/memory/: address.rs  frame_allocator.rs  kernel_heap.rs  memory_set.rs  mod.rs  page.rs  page_table.rs  user_check.rs
crates/kernel/src/memory/memory_space/: init_stack.rs  memory_set.rs  mod.rs  page_table.rs  vm_area.rs
crates/kernel/src/process/: init_stack.rs  inner.rs  manager.rs  mod.rs  user_ptr.rs
crates/kernel/src/signal/: handlers.rs  mod.rs  receiver.rs
crates/kernel/src/syscall/: flags.rs  fs.rs  memory.rs  misc.rs  mod.rs  process.rs  signal.rs  sync.rs  thread.rs  time.rs
crates/kernel/src/thread/: inner.rs  mod.rs  timer.rs  user.rs
crates/kernel/src/time/: mod.rs  timer.rs
crates/kernel/src/tracer/: mod.rs  profiling.rs
crates/kernel/src/trap/: context.rs  kernel_trap.rs  mod.rs  timer.rs  trap.S
crates/libkernel/: Cargo.toml
crates/libkernel/src/: lib.rs  uart_console.rs
crates/libkernel/src/drivers/: mod.rs
crates/libkernel/src/drivers/qemu_block/: disk_driver.rs  virtio.rs
crates/libkernel/src/drivers/qemu_uart/: tty.rs
crates/libkernel/src/fs/: dentry.rs  file.rs  inode.rs  mod.rs  page_cache.rs  pipe.rs
crates/libkernel/src/fs/devfs/: mod.rs  rtc.rs  tty.rs
crates/libkernel/src/fs/fat32/: dir.rs  file.rs  mod.rs
crates/libkernel/src/fs/procfs/: meminfo.rs  mod.rs  mounts.rs
crates/libkernel/src/fs/tmpfs/: mod.rs
crates/libkernel/src/hart/: mod.rs
crates/libkernel/src/memory/: address.rs  kernel_heap.rs  mod.rs  page.rs  user_check.rs
crates/libkernel/src/memory/memory_space/: init_stack.rs  mod.rs  page_table.rs  vm_area.rs
crates/libkernel/src/process/: inner.rs  mod.rs
crates/libkernel/src/signal/: handlers.rs
crates/libkernel/src/thread/: mod.rs
crates/libkernel/src/trap/: context.rs  mod.rs
crates/memory/: Cargo.toml
crates/memory/src/: address.rs  frame_allocator.rs  kernel_heap.rs  lib.rs  memory_set.rs  page_table.rs
crates/signal/: Cargo.toml
crates/signal/src/: action.rs  handlers.rs  lib.rs  receiver.rs
crates/utils/common/: Cargo.toml
crates/utils/console_output/: Cargo.toml
crates/utils/defines/: Cargo.toml
crates/utils/defines/src/: config.rs  constant.rs  error.rs  fs.rs  ioctl.rs  lib.rs  misc.rs  resource.rs  signal.rs  structs.rs  syscall.rs  trap_context.rs  user_ptr.rs
crates/utils/defines/src/structs/: mod.rs  signal.rs
crates/utils/elf/: Cargo.toml
crates/utils/executor/: Cargo.toml
crates/utils/executor/src/: lib.rs  yield_now.rs
crates/utils/executor/src/time/: mod.rs  timer.rs
crates/utils/fat32/: Cargo.toml
crates/utils/fat32/src/: bpb.rs  dir_entry.rs  fat.rs  lib.rs
crates/utils/fat32/tests/: regression.rs
crates/utils/idallocator/: Cargo.toml
crates/utils/kernel_tracer/: Cargo.toml  README.md
crates/utils/kernel_tracer/src/: level.rs  lib.rs  macros.rs  record.rs  span.rs
crates/utils/kernel_tracer/src/span/: instrument.rs  loggable.rs  mod.rs
crates/utils/klocks/: Cargo.toml
crates/utils/klocks/src/: kspin.rs  lib.rs  sleep.rs
crates/utils/macros/: Cargo.toml
crates/utils/misc/: Cargo.toml
crates/utils/simple_logger/: Cargo.toml
crates/utils/simple_logger/src/: lib.rs
crates/utils/uart_console/: Cargo.toml
crates/utils/uart_console/src/: lib.rs
docs/: 文件系统.md  构建系统.md  浮点数支持.md
res/rootfs/: busybox_testcode.sh
res/rootfs/ptest/: brk  chdir  clone  close  dup  dup2  execve  exit  fork  fstat  getcwd  getdents  (+21 more)
user/: Cargo.toml  build.rs
user/src/: console.rs  extern_symbols.rs  lang_items.rs  lib.rs  linker.ld  syscall.rs
xtask/: Cargo.toml
xtask/src/: build.rs  cmd_util.rs  ktest.rs  main.rs  profiling.rs  qemu.rs  timing.rs  tool.rs  variables.rs
(+19 files in other folders)
