[workspace]
members = [
  "crates/executor",
  "crates/kernel",
  "crates/memory",
  "crates/drivers",
  "crates/arch/*",
  "crates/utils/*",
  "xtask",
  "user",
]
exclude = ["crates/dependencies"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["cxz888 <idlercloud@gmail.com>"]
edition = "2021"

[workspace.dependencies]
riscv = { path = "crates/dependencies/riscv/riscv" }
buddy_system_allocator = { path = "crates/dependencies/buddy_system_allocator" }
fatfs = { path = "crates/dependencies/rust-fatfs" }
# fatfs = { path = "crates/dependencies/rust-fatfs", default-features = false, features = [
#   "alloc",
#   "lfn",
# ] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "smallvec",
  "alloc",
] }
spin = "0.9"
bitflags = "2.4"
tap = "1"
compact_str = { version = "0.8.0-beta", default-features = false }
goblin = { version = "0.7", default-features = false, features = [
  "elf32",
  "elf64",
  "endian_fd",
] }
sbi-rt = { version = "0.0.3-rc.2", features = ["legacy"] }

[workspace.lints.clippy]
all = "warn"
await_holding_lock = "warn"
char_lit_as_u8 = "warn"
checked_conversions = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
disallowed_methods = "warn"
disallowed_types = "warn"
doc_markdown = "warn"
empty_enum = "warn"
enum_glob_use = "warn"
exit = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
fallible_impl_from = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp_const = "warn"
fn_params_excessive_bools = "warn"
from_iter_instead_of_collect = "warn"
if_let_mutex = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
inefficient_to_string = "warn"
invalid_upcast_comparisons = "warn"
large_digit_groups = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
let_unit_value = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_ok_or = "warn"
map_err_ignore = "warn"
map_flatten = "warn"
map_unwrap_or = "warn"
match_on_vec_items = "warn"
match_same_arms = "warn"
match_wild_err_arm = "warn"
match_wildcard_for_single_variants = "warn"
mismatched_target_os = "warn"
missing_enforced_import_renames = "warn"
missing_safety_doc = "warn"
mut_mut = "warn"
mutex_integer = "warn"
needless_borrow = "warn"
needless_continue = "warn"
needless_for_each = "warn"
option_option = "warn"
path_buf_push_overwrite = "warn"
ptr_as_ptr = "warn"
rc_mutex = "warn"
ref_option_ref = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "warn"
single_match_else = "warn"
string_add_assign = "warn"
string_add = "warn"
string_lit_as_bytes = "warn"
string_to_string = "warn"
trait_duplication_in_bounds = "warn"
transmute_ptr_to_ptr = "warn"
unimplemented = "warn"
unnested_or_patterns = "warn"
unused_self = "warn"
useless_transmute = "warn"
uninlined_format_args = "warn"
verbose_file_reads = "warn"
zero_sized_map_values = "warn"

cast_ptr_alignment = "deny"
not_unsafe_ptr_arg_deref = "deny"

[workspace.lints.rust]
future_incompatible = "warn"
nonstandard_style = "warn"
rust_2018_idioms = "warn"
unsafe_op_in_unsafe_fn = "warn"
unreachable_patterns = "deny"

[profile.dev]
debug = 2
opt-level = 0

[profile.release]
debug = 2
opt-level = 3

[profile.release.package.user]
debug = 2
opt-level = 3

[profile.release.package.xtask]
debug = false
opt-level = 3
