[workspace]
members = ["crates/kernel", "crates/arch/*", "crates/utils/*", "xtask", "user"]
exclude = ["deps"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["cxz888 <idlercloud@gmail.com>"]
edition = "2021"

[workspace.dependencies]
async-lock = { version = "3", default-features = false }
atomic = "0.6"
bitflags = "2"
buddy_system_allocator = { version = "0.11", default-features = false, features = ["alloc"] }
bytemuck = { version = "1", features = ["derive"] }
chrono = { version = "0.4", default-features = false }
derive_more = { version = "1", default-features = false }
ecow = { git = "https://github.com/idlercloud/ecow.git", branch = "dev", default-features = false }
event-listener = { version = "5", default-features = false }
extend = "1"
fastrand = { version = "2", default-features = false }
hashbrown = { version = "0.15" }
heapless = { version = "0.8", features = ["mpmc_large"] }
pin-project = "1"
riscv = "0.12"
sbi-rt = "0.0.3"
scopeguard = { version = "1", default-features = false }
smallvec = "1"
spin = { version = "0.9", default-features = false, features = ["lazy", "spin_mutex"] }
tap = "1.0"
triomphe = { version = "0.1", default-features = false, features = ["unsize"] }
unsize = "1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
debug = "limited"

[profile.release]
codegen-units = 1
lto = "fat"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
await_holding_lock = "warn"
char_lit_as_u8 = "warn"
checked_conversions = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
disallowed_methods = "warn"
disallowed_types = "warn"
doc_markdown = "warn"
empty_enum = "warn"
enum_glob_use = "warn"
exit = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
fallible_impl_from = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp_const = "warn"
fn_params_excessive_bools = "warn"
from_iter_instead_of_collect = "warn"
if_let_mutex = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
inefficient_to_string = "warn"
invalid_upcast_comparisons = "warn"
large_digit_groups = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
let_unit_value = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_ok_or = "warn"
map_err_ignore = "warn"
map_flatten = "warn"
map_unwrap_or = "warn"
match_on_vec_items = "warn"
match_same_arms = "warn"
match_wild_err_arm = "warn"
match_wildcard_for_single_variants = "warn"
missing_enforced_import_renames = "warn"
missing_safety_doc = "warn"
mut_mut = "warn"
mutex_integer = "warn"
needless_borrow = "warn"
needless_continue = "warn"
needless_for_each = "warn"
option_option = "warn"
path_buf_push_overwrite = "warn"
ptr_as_ptr = "warn"
rc_mutex = "warn"
ref_option_ref = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "warn"
single_match_else = "warn"
string_add = "warn"
string_add_assign = "warn"
string_lit_as_bytes = "warn"
string_to_string = "warn"
trait_duplication_in_bounds = "warn"
transmute_ptr_to_ptr = "warn"
unimplemented = "warn"
uninlined_format_args = "warn"
unnested_or_patterns = "warn"
unused_self = "warn"
useless_transmute = "warn"
verbose_file_reads = "warn"
zero_sized_map_values = "warn"

cast_ptr_alignment = "deny"
not_unsafe_ptr_arg_deref = "deny"

[workspace.lints.rust]
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
unexpected_cfgs = "warn"
unsafe_op_in_unsafe_fn = "warn"

unreachable_patterns = "deny"
