[package]
name = "user"
version = "0.1.0"
authors = ["cxz888 <idlercloud@gmail.com>"]
edition = "2021"

[dependencies]
buddy_system_allocator.workspace = true
fastrand = { workspace = true, default-features = false }
spin.workspace = true

defines = { path = "../crates/utils/defines" }

[lints]
workspace = true
