[package]
name = "xtask"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tap.workspace = true
clap = { version = "4.5", features = ["derive"] }
fatfs = "0.3"
const_format = "0.2"
fastrand = "2.0"
serde_json = "1.0"

[lints]
workspace = true
