[package]
name = "xtask"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = { workspace = true, default-features = true }
tap.workspace = true
clap = { version = "4.5", features = ["derive"] }
fatfs = "0.3"
const_format = "0.2"
serde_json = "1.0"
regex = "1.10"

[lints]
workspace = true
