[package]
name = "xtask"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = { workspace = true, default-features = true }
tap.workspace = true

anyhow = "1"
clap = { version = "4", features = ["derive"] }
const_format = "0.2"
fatfs = "0.3"
regex = "1"
serde_json = "1.0"

[lints]
workspace = true
