[package]
name = "executor"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defines = { path = "../utils/defines" }
klocks = { path = "../utils/klocks" }
kernel_tracer = { path = "../utils/kernel_tracer" }
async-task = { version = "4.5", default-features = false }
crossbeam-queue = { version = "0.3", default-features = false, features = [
  "alloc",
] }

[lints]
workspace = true
