[package]
name = "executor"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless.workspace = true
defines = { path = "../utils/defines" }
klocks = { path = "../utils/klocks" }
kernel_tracer = { path = "../utils/kernel_tracer" }
async-task = { version = "4.5", default-features = false }

[lints]
workspace = true
