[package]
name = "libkernel"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
async-lock.workspace = true
atomic.workspace = true
bitflags.workspace = true
buddy_system_allocator.workspace = true
bytemuck.workspace = true
derive_more = { workspace = true, features = ["display"] }
ecow.workspace = true
event-listener.workspace = true
extend.workspace = true
futures.workspace = true
hashbrown.workspace = true
heapless.workspace = true
riscv = { workspace = true, features = ["s-mode"] }
sbi-rt.workspace = true
scopeguard.workspace = true
smallvec.workspace = true
triomphe.workspace = true
unsize.workspace = true

common = { path = "../utils/common" }
defines = { path = "../utils/defines" }
elf = { path = "../utils/elf" }
executor = { path = "../utils/executor" }
idallocator = { path = "../utils/idallocator" }
kernel_tracer = { path = "../utils/kernel_tracer" }
klocks = { path = "../utils/klocks" }
riscv_guard = { path = "../arch/riscv_guard" }
riscv_time = { path = "../arch/riscv_time" }
fat32 = { path = "../fs/fat32" }

anstyle = { version = "1.0", default-features = false }
async-channel = { version = "2.3", default-features = false }
crossbeam-utils = { version = "0.8", default-features = false }
uart_16550 = "0.3"
virtio-drivers = "0.7"

[lints]
workspace = true
