[package]
name = "memory"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator.workspace = true
riscv.workspace = true
spin.workspace = true
bitflags.workspace = true
goblin.workspace = true
defines = { path = "../utils/defines" }
