[package]
name = "riscv_time"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv.workspace = true
sbi-rt.workspace = true

common = { path = "../../utils/common" }

[lints]
workspace = true
