[package]
name = "riscv_time"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv.workspace = true

common = { path = "../../utils/common" }

[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
sbi-rt.workspace = true

[lints]
workspace = true
