[package]
name = "sbi_console"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sbi-rt.workspace = true
riscv_guard = { path = "../riscv_guard" }
defines = { path = "../../utils/defines" }
klocks = { path = "../../utils/klocks" }
sbi-spec = "0.0.6"

[lints]
workspace = true
