[package]
name = "user_check"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv.workspace = true
scopeguard.workspace = true
riscv_guard = { path = "../riscv_guard" }
defines = { path = "../../utils/defines" }
kernel_tracer = { path = "../../utils/kernel_tracer" }

[lints]
workspace = true
