[package]
name = "drivers"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
riscv.workspace = true
qemu_block = { path = "../qemu_block" }
qemu_plic = { path = "../qemu_plic" }
qemu_uart = { path = "../qemu_uart" }
defines = { path = "../../utils/defines" }
klocks = { path = "../../utils/klocks" }

[lints]
workspace = true
