[package]
name = "qemu_uart"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
heapless.workspace = true
defines = { path = "../../utils/defines" }
klocks = { path = "../../utils/klocks" }
kernel_tracer = { path = "../../utils/kernel_tracer" }
uart_16550 = "0.3"

[lints]
workspace = true
