[package]
name = "virtio_glue"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
hashbrown.workspace = true

hal = { path = "../hal" }
libkernel = { path = "../../libkernel" }
common = { path = "../../utils/common" }
klocks = { path = "../../utils/klocks" }

virtio-drivers = "0.13"

[lints]
workspace = true
