[package]
name = "fat32_vfs"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
ecow.workspace = true
smallvec.workspace = true
triomphe.workspace = true
unsize.workspace = true

libkernel = { path = "../../libkernel" }
hal = { path = "../../drivers/hal" }
common = { path = "../../utils/common" }
defines = { path = "../../utils/defines" }
executor = { path = "../../utils/executor" }
kernel_tracer = { path = "../../utils/kernel_tracer" }
klocks = { path = "../../utils/klocks" }
fat32 = { path = "../../utils/fat32" }

[lints]
workspace = true
