[package]
name = "executor"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
futures.workspace = true

common = { path = "../common" }
defines = { path = "../defines" }
klocks = { path = "../klocks" }
kernel_tracer = { path = "../kernel_tracer" }
riscv_time = { path = "../../arch/riscv_time" }

async-task = { version = "4.7", default-features = false }
crossbeam-queue = { version = "0.3", default-features = false, features = ["alloc"] }

[lints]
workspace = true
