[package]
name = "fat32"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
default = ["kernel"]
kernel = ["dep:klocks"]
std = []

[dependencies]
bitflags.workspace = true
chrono.workspace = true
ecow.workspace = true
smallvec.workspace = true

defines = { path = "../../utils/defines" }
hal = { path = "../../drivers/hal" }
kernel_tracer = { path = "../../utils/kernel_tracer" }
klocks = { path = "../../utils/klocks", optional = true }

[lints]
workspace = true

[[test]]
name = "regression"
required-features = ["std"]
