[package]
name = "fat32"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
default = ["kernel"]
kernel = ["hal/kernel", "kernel_tracer/kernel", "klocks/kernel"]
std = ["hal/std", "kernel_tracer/std", "klocks/std"]

[dependencies]
bitflags.workspace = true
chrono.workspace = true
ecow.workspace = true
smallvec.workspace = true

defines = { path = "../../utils/defines" }
hal = { path = "../../drivers/hal", default-features = false }
kernel_tracer = { path = "../../utils/kernel_tracer", default-features = false }
klocks = { path = "../../utils/klocks", default-features = false }

[lints]
workspace = true

[[test]]
name = "regression"
required-features = ["std"]
