[package]
name = "kernel_tracer"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ecow.workspace = true
pin-project.workspace = true
klocks = { path = "../../utils/klocks" }

[lints]
workspace = true
