[package]
name = "kernel_tracer"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["kernel"]
kernel = ["klocks/kernel"]
std = ["klocks/std"]

[dependencies]
ecow.workspace = true
pin-project.workspace = true

klocks = { path = "../../utils/klocks", default-features = false }

[lints]
workspace = true
