[package]
name = "klocks"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = { workspace = true, features = ["rwlock"] }
riscv_time = { path = "../../arch/riscv_time" }
riscv_guard = { path = "../../arch/riscv_guard" }

[lints]
workspace = true
