[package]
name = "uart_console"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qemu_uart = { path = "../../drivers/qemu_uart" }
klocks = { path = "../klocks" }

[lints]
workspace = true
